--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,23 +9,28 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">WordPress - Admin</th></tr>
-<tr><td><a href="#t0">Run on Chrome</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">19,864</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Run on Chrome</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">22,196</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">WordPress - Admin</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Run on Chrome &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">com.wordpress.posts.Post_01_Create_Read_Update_Delete</td><td><a href="#m0">Post_01_Create_New_Post</a></td><td rowspan="1">1679320634300</td><td rowspan="1">8062</td></tr><tr class="passedeven"><td><a href="#m1">Post_02_Search_Post</a></td><td rowspan="1">1679320642411</td><td rowspan="1">1349</td></tr><tr class="passedeven"><td><a href="#m2">Post_03_View_Post</a></td><td rowspan="1">1679320643763</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m3">Post_04_Edit_Post</a></td><td rowspan="1">1679320643766</td><td rowspan="1">3</td></tr><tr class="passedeven"><td><a href="#m4">Post_05_Delete_Post</a></td><td rowspan="1">1679320643770</td><td rowspan="1">2</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">WordPress - Admin</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Run on Chrome &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.wordpress.posts.Post_01_Create_Read_Update_Delete</td><td><a href="#m0">Post_01_Create_New_Post</a></td><td rowspan="1">1680711052116</td><td rowspan="1">7861</td></tr><tr class="passedeven"><td><a href="#m1">Post_02_Search_And_View_Post</a></td><td rowspan="1">1680711060026</td><td rowspan="1">6652</td></tr></tbody>
 </table>
-<h2>Run on Chrome</h2><h3 id="m0">com.wordpress.posts.Post_01_Create_Read_Update_Delete#Post_01_Create_New_Post</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">[INFO ] [2023-03-20 20:57:14,346] Create_Post - Step 01: Click to 'Posts' menu Link
-<br><br/>[INFO ] [2023-03-20 20:57:15,468] Create_Post - Step 02: Get 'Search Post' Page URL
-<br><br/>[INFO ] [2023-03-20 20:57:15,473] Create_Post - Step 02: Click to 'Add New' button
-<br><br/>[INFO ] [2023-03-20 20:57:17,791] Create_Post - Step 03: Enter to post title
-<br><br/>[INFO ] [2023-03-20 20:57:18,413] Create_Post - Step 04: Enter to body
-<br><br/>[INFO ] [2023-03-20 20:57:20,933] Create_Post - Step 05: Click to 'Publish' button
-<br><br/>[INFO ] [2023-03-20 20:57:21,069] Create_Post - Step 07: Click to 'Publish Verify'button
-<br><br/>[INFO ] [2023-03-20 20:57:21,196] Create_Post - Step 08: Verify 'Post published' message is displayed
+<h2>Run on Chrome</h2><h3 id="m0">com.wordpress.posts.Post_01_Create_Read_Update_Delete#Post_01_Create_New_Post</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">[INFO ] [2023-04-05 23:10:52,159] Create_Post - Step 01: Click to 'Posts' menu Link
+<br><br/>[INFO ] [2023-04-05 23:10:53,306] Create_Post - Step 02: Get 'Search Post' Page URL
+<br><br/>[INFO ] [2023-04-05 23:10:53,311] Create_Post - Step 02: Click to 'Add New' button
+<br><br/>[INFO ] [2023-04-05 23:10:55,392] Create_Post - Step 03: Enter to post title
+<br><br/>[INFO ] [2023-04-05 23:10:55,962] Create_Post - Step 04: Enter to body
+<br><br/>[INFO ] [2023-04-05 23:10:58,486] Create_Post - Step 05: Click to 'Publish' button
+<br><br/>[INFO ] [2023-04-05 23:10:58,606] Create_Post - Step 07: Click to 'Publish Verify'button
+<br><br/>[INFO ] [2023-04-05 23:10:58,704] Create_Post - Step 08: Verify 'Post published' message is displayed
 <br></div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.wordpress.posts.Post_01_Create_Read_Update_Delete#Post_02_Search_Post</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">[INFO ] [2023-03-20 20:57:22,414] Search_Post - Step 01: Open 'Search Post' page
+<h3 id="m1">com.wordpress.posts.Post_01_Create_Read_Update_Delete#Post_02_Search_And_View_Post</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">[INFO ] [2023-04-05 23:11:00,029] Search_Post - Step 01: Open 'Search Post' page
+<br><br/>[INFO ] [2023-04-05 23:11:02,218] Search_Post - Step 02: Enter to searh textbox
+<br><br/>[INFO ] [2023-04-05 23:11:02,324] Search_Post - Step 03: Click to 'Search Posts' button
+<br><br/>[INFO ] [2023-04-05 23:11:04,270] Search_Post - Step 04: Verify Search Table contain 'Live Coding Title 1599'
+<br><br/>[INFO ] [2023-04-05 23:11:04,319] Search_Post - Step 05: Verify Search Table contain  'automationfc'
+<br><br/>[INFO ] [2023-04-05 23:11:04,365] Search_Post - Step 06: Open End User site
+<br><br/>[INFO ] [2023-04-05 23:11:05,422] Search_Post - Step 07: Verify Post Title displayed at Home Page
+<br><br/>[INFO ] [2023-04-05 23:11:05,559] Search_Post - Step 08: Click to Post Title
+<br><br/>[INFO ] [2023-04-05 23:11:06,534] Search_Post - Step 09: Verify Post infor displayed at Post detail page
 <br></div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.wordpress.posts.Post_01_Create_Read_Update_Delete#Post_03_View_Post</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.wordpress.posts.Post_01_Create_Read_Update_Delete#Post_04_Edit_Post</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">com.wordpress.posts.Post_01_Create_Read_Update_Delete#Post_05_Delete_Post</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
