--- a/test-output/old/WordPress - Admin/classes.html
+++ b/test-output/old/WordPress - Admin/classes.html
@@ -15,19 +15,7 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>Post_05_Delete_Post</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>Post_04_Edit_Post</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>Post_02_Search_Post</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>Post_03_View_Post</td>
+<td>Post_02_Search_And_View_Post</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
