--- a/test-output/old/WordPress - Admin/reporter-output.html
+++ b/test-output/old/WordPress - Admin/reporter-output.html
@@ -1,31 +1,47 @@
-<h2>Reporter output</h2><table><tr><td>[INFO ] [2023-03-20 20:57:04,977] Precondition - Step 01: Open Browser and adminUrl
+<h2>Reporter output</h2><table><tr><td>[INFO ] [2023-04-05 23:10:45,292] Precondition - Step 01: Open Browser and adminUrl
 <br></td></tr>
-<tr><td>[INFO ] [2023-03-20 20:57:11,882] Precondition - Step 02: Enter to Username textbox with value: automationfc
+<tr><td>[INFO ] [2023-04-05 23:10:49,574] Precondition - Step 02: Enter to Username textbox with value: automationfc
 <br></td></tr>
-<tr><td>[INFO ] [2023-03-20 20:57:11,980] Precondition - Step 03: Enter to Password textbox with value: automationfc
+<tr><td>[INFO ] [2023-04-05 23:10:49,673] Precondition - Step 03: Enter to Password textbox with value: automationfc
 <br></td></tr>
-<tr><td>[INFO ] [2023-03-20 20:57:12,071] Precondition - Step 04: Click to Login button 
+<tr><td>[INFO ] [2023-04-05 23:10:49,758] Precondition - Step 04: Click to Login button 
 <br></td></tr>
-<tr><td>[INFO ] [2023-03-20 20:57:14,346] Create_Post - Step 01: Click to 'Posts' menu Link
+<tr><td>[INFO ] [2023-04-05 23:10:52,159] Create_Post - Step 01: Click to 'Posts' menu Link
 <br></td></tr>
-<tr><td>[INFO ] [2023-03-20 20:57:15,468] Create_Post - Step 02: Get 'Search Post' Page URL
+<tr><td>[INFO ] [2023-04-05 23:10:53,306] Create_Post - Step 02: Get 'Search Post' Page URL
 <br></td></tr>
-<tr><td>[INFO ] [2023-03-20 20:57:15,473] Create_Post - Step 02: Click to 'Add New' button
+<tr><td>[INFO ] [2023-04-05 23:10:53,311] Create_Post - Step 02: Click to 'Add New' button
 <br></td></tr>
-<tr><td>[INFO ] [2023-03-20 20:57:17,791] Create_Post - Step 03: Enter to post title
+<tr><td>[INFO ] [2023-04-05 23:10:55,392] Create_Post - Step 03: Enter to post title
 <br></td></tr>
-<tr><td>[INFO ] [2023-03-20 20:57:18,413] Create_Post - Step 04: Enter to body
+<tr><td>[INFO ] [2023-04-05 23:10:55,962] Create_Post - Step 04: Enter to body
 <br></td></tr>
-<tr><td>[INFO ] [2023-03-20 20:57:20,933] Create_Post - Step 05: Click to 'Publish' button
+<tr><td>[INFO ] [2023-04-05 23:10:58,486] Create_Post - Step 05: Click to 'Publish' button
 <br></td></tr>
-<tr><td>[INFO ] [2023-03-20 20:57:21,069] Create_Post - Step 07: Click to 'Publish Verify'button
+<tr><td>[INFO ] [2023-04-05 23:10:58,606] Create_Post - Step 07: Click to 'Publish Verify'button
 <br></td></tr>
-<tr><td>[INFO ] [2023-03-20 20:57:21,196] Create_Post - Step 08: Verify 'Post published' message is displayed
+<tr><td>[INFO ] [2023-04-05 23:10:58,704] Create_Post - Step 08: Verify 'Post published' message is displayed
 <br></td></tr>
-<tr><td>[INFO ] [2023-03-20 20:57:22,414] Search_Post - Step 01: Open 'Search Post' page
+<tr><td>[INFO ] [2023-04-05 23:11:00,029] Search_Post - Step 01: Open 'Search Post' page
 <br></td></tr>
-<tr><td>[INFO ] [2023-03-20 20:57:23,775] OS name = windows 10
+<tr><td>[INFO ] [2023-04-05 23:11:02,218] Search_Post - Step 02: Enter to searh textbox
 <br></td></tr>
-<tr><td>[INFO ] [2023-03-20 20:57:23,775] Driver instance name = chromedriver: chrome on windows (297ce42ce976d9835f5d03e71c5cb25f)
+<tr><td>[INFO ] [2023-04-05 23:11:02,324] Search_Post - Step 03: Click to 'Search Posts' button
+<br></td></tr>
+<tr><td>[INFO ] [2023-04-05 23:11:04,270] Search_Post - Step 04: Verify Search Table contain 'Live Coding Title 1599'
+<br></td></tr>
+<tr><td>[INFO ] [2023-04-05 23:11:04,319] Search_Post - Step 05: Verify Search Table contain  'automationfc'
+<br></td></tr>
+<tr><td>[INFO ] [2023-04-05 23:11:04,365] Search_Post - Step 06: Open End User site
+<br></td></tr>
+<tr><td>[INFO ] [2023-04-05 23:11:05,422] Search_Post - Step 07: Verify Post Title displayed at Home Page
+<br></td></tr>
+<tr><td>[INFO ] [2023-04-05 23:11:05,559] Search_Post - Step 08: Click to Post Title
+<br></td></tr>
+<tr><td>[INFO ] [2023-04-05 23:11:06,534] Search_Post - Step 09: Verify Post infor displayed at Post detail page
+<br></td></tr>
+<tr><td>[INFO ] [2023-04-05 23:11:06,681] OS name = windows 10
+<br></td></tr>
+<tr><td>[INFO ] [2023-04-05 23:11:06,681] Driver instance name = chromedriver: chrome on windows (f0a2157423d094c09043416b1d626378)
 <br></td></tr>
 </table>
