--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,14 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6b78a6">  <td>23/01/10 14:59:48</td>   <td>0</td> <td title="&gt;&gt;BaseTestJquery.initBeforeSuite()[pri:0, instance:com.nopcommerce.user.Level_24_Multiple_Enviroment_Owner@2dbf4cbd]">&gt;&gt;initBeforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1961129028</td>   <td></td> </tr>
-<tr bgcolor="8caefb">  <td>23/01/10 14:59:49</td>   <td>182</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_24_Multiple_Enviroment_Owner.User_01_Register()[pri:0, instance:com.nopcommerce.user.Level_24_Multiple_Enviroment_Owner@2dbf4cbd]">User_01_Register</td> 
-  <td>main@1961129028</td>   <td></td> </tr>
-<tr bgcolor="8caefb">  <td>23/01/10 14:59:49</td>   <td>197</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_24_Multiple_Enviroment_Owner.User_02_Login()[pri:0, instance:com.nopcommerce.user.Level_24_Multiple_Enviroment_Owner@2dbf4cbd]">User_02_Login</td> 
-  <td>main@1961129028</td>   <td></td> </tr>
-<tr bgcolor="8caefb">  <td>23/01/10 14:59:49</td>   <td>202</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_24_Multiple_Enviroment_Owner.User_03_My_Account()[pri:0, instance:com.nopcommerce.user.Level_24_Multiple_Enviroment_Owner@2dbf4cbd]">User_03_My_Account</td> 
-  <td>main@1961129028</td>   <td></td> </tr>
-<tr bgcolor="8caefb">  <td>23/01/10 14:59:49</td>   <td>209</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_24_Multiple_Enviroment_Owner.afterClass()[pri:0, instance:com.nopcommerce.user.Level_24_Multiple_Enviroment_Owner@2dbf4cbd]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1961129028</td>   <td></td> </tr>
+<tr bgcolor="8aa8a3">  <td>23/04/05 22:31:15</td>   <td>0</td> <td title="&gt;&gt;BaseTestJquery.initBeforeSuite()[pri:0, instance:com.wordpress.posts.Post_01_Create_Read_Update_Delete@27eedb64]">&gt;&gt;initBeforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@461129530</td>   <td></td> </tr>
+<tr bgcolor="6e70a6">  <td>23/04/05 22:31:15</td>   <td>121</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Post_01_Create_Read_Update_Delete.Post_01_Create_New_Post()[pri:0, instance:com.wordpress.posts.Post_01_Create_Read_Update_Delete@27eedb64]">Post_01_Create_New_Post</td> 
+  <td>main@461129530</td>   <td></td> </tr>
+<tr bgcolor="6e70a6">  <td>23/04/05 22:31:15</td>   <td>129</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Post_01_Create_Read_Update_Delete.Post_02_Search_And_View_Post()[pri:0, instance:com.wordpress.posts.Post_01_Create_Read_Update_Delete@27eedb64]">Post_02_Search_And_View_Post</td> 
+  <td>main@461129530</td>   <td></td> </tr>
+<tr bgcolor="6e70a6">  <td>23/04/05 22:31:15</td>   <td>132</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Post_01_Create_Read_Update_Delete.afterClass()[pri:0, instance:com.wordpress.posts.Post_01_Create_Read_Update_Delete@27eedb64]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@461129530</td>   <td></td> </tr>
 </table>
