--- a/test-output/old/WordPress - Admin/methods.html
+++ b/test-output/old/WordPress - Admin/methods.html
@@ -1,20 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>WordPress - Admin</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f7cefd">  <td>23/03/20 20:57:04</td>   <td>0</td> <td title="&gt;&gt;BaseTestJquery.initBeforeSuite()[pri:0, instance:com.wordpress.posts.Post_01_Create_Read_Update_Delete@73d983ea]">&gt;&gt;initBeforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@139947936</td>   <td></td> </tr>
-<tr bgcolor="afaabc">  <td>23/03/20 20:57:04</td>   <td>20</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Post_01_Create_Read_Update_Delete.beforeClass(java.lang.String, java.lang.String)[pri:0, instance:com.wordpress.posts.Post_01_Create_Read_Update_Delete@73d983ea]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@139947936</td>   <td></td> </tr>
-<tr bgcolor="afaabc">  <td>23/03/20 20:57:14</td>   <td>9344</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Post_01_Create_Read_Update_Delete.Post_01_Create_New_Post()[pri:0, instance:com.wordpress.posts.Post_01_Create_Read_Update_Delete@73d983ea]">Post_01_Create_New_Post</td> 
-  <td>main@139947936</td>   <td></td> </tr>
-<tr bgcolor="afaabc">  <td>23/03/20 20:57:22</td>   <td>17455</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Post_01_Create_Read_Update_Delete.Post_02_Search_Post()[pri:0, instance:com.wordpress.posts.Post_01_Create_Read_Update_Delete@73d983ea]">Post_02_Search_Post</td> 
-  <td>main@139947936</td>   <td></td> </tr>
-<tr bgcolor="afaabc">  <td>23/03/20 20:57:23</td>   <td>18807</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Post_01_Create_Read_Update_Delete.Post_03_View_Post()[pri:0, instance:com.wordpress.posts.Post_01_Create_Read_Update_Delete@73d983ea]">Post_03_View_Post</td> 
-  <td>main@139947936</td>   <td></td> </tr>
-<tr bgcolor="afaabc">  <td>23/03/20 20:57:23</td>   <td>18810</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Post_01_Create_Read_Update_Delete.Post_04_Edit_Post()[pri:0, instance:com.wordpress.posts.Post_01_Create_Read_Update_Delete@73d983ea]">Post_04_Edit_Post</td> 
-  <td>main@139947936</td>   <td></td> </tr>
-<tr bgcolor="afaabc">  <td>23/03/20 20:57:23</td>   <td>18814</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Post_01_Create_Read_Update_Delete.Post_05_Delete_Post()[pri:0, instance:com.wordpress.posts.Post_01_Create_Read_Update_Delete@73d983ea]">Post_05_Delete_Post</td> 
-  <td>main@139947936</td>   <td></td> </tr>
-<tr bgcolor="afaabc">  <td>23/03/20 20:57:23</td>   <td>18818</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Post_01_Create_Read_Update_Delete.afterClass()[pri:0, instance:com.wordpress.posts.Post_01_Create_Read_Update_Delete@73d983ea]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@139947936</td>   <td></td> </tr>
+<tr bgcolor="95a289">  <td>23/04/05 23:10:45</td>   <td>0</td> <td title="&gt;&gt;BaseTestJquery.initBeforeSuite()[pri:0, instance:com.wordpress.posts.Post_01_Create_Read_Update_Delete@6f63b475]">&gt;&gt;initBeforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1633013890</td>   <td></td> </tr>
+<tr bgcolor="b292e9">  <td>23/04/05 23:10:45</td>   <td>22</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Post_01_Create_Read_Update_Delete.beforeClass(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.wordpress.posts.Post_01_Create_Read_Update_Delete@6f63b475]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1633013890</td>   <td></td> </tr>
+<tr bgcolor="b292e9">  <td>23/04/05 23:10:52</td>   <td>6847</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Post_01_Create_Read_Update_Delete.Post_01_Create_New_Post()[pri:0, instance:com.wordpress.posts.Post_01_Create_Read_Update_Delete@6f63b475]">Post_01_Create_New_Post</td> 
+  <td>main@1633013890</td>   <td></td> </tr>
+<tr bgcolor="b292e9">  <td>23/04/05 23:11:00</td>   <td>14757</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Post_01_Create_Read_Update_Delete.Post_02_Search_And_View_Post()[pri:0, instance:com.wordpress.posts.Post_01_Create_Read_Update_Delete@6f63b475]">Post_02_Search_And_View_Post</td> 
+  <td>main@1633013890</td>   <td></td> </tr>
+<tr bgcolor="b292e9">  <td>23/04/05 23:11:06</td>   <td>21411</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Post_01_Create_Read_Update_Delete.afterClass()[pri:0, instance:com.wordpress.posts.Post_01_Create_Read_Update_Delete@6f63b475]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1633013890</td>   <td></td> </tr>
 </table>
